# temp

./: README.md
d4dof/: Makefile  StackWrapper.h  fourDof.cpp  fourDof.h  main.cpp
d4dof/interfaces/: CMakeLists.txt  rom4.i
d4dof/interfaces/simpleExample/: CMakeLists.txt  main.cpp  simpleExample.i  solveODE.cpp  solveODE.h
snopt_slider_crank/: CMakeLists.txt  README.md  file3.txt  idasSlCrank_FSA_with_snopt.c
